--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,13 +40,13 @@
         android:name="android.hardware.touchscreen"
         android:required="false" />
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
         android:name="WordPress"
-        android:allowBackup="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/WordPress" >
+        android:theme="@style/WordPress"
+        tools:node="replace">
 
         <!-- Account activities -->
         <activity
